[package]

name = "router"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
license = "MIT"
version = "0.5.1"
description = "A router for the Iron framework."
repository = "https://github.com/iron/router"
documentation = "http://ironframework.io/doc/router/index.html"
keywords = ["iron", "web", "http", "routing", "router"]

[dependencies]
route-recognizer = { git="https://github.com/Nemo157/route-recognizer.rs", branch="reverse_priority"}
iron = "0.5"
url = "1.1"
